--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /.vs/Bot/v16
+/Server/bin/Debug/netcoreapp3.1
+/Server/obj
